// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList matches snapshot when there are list items 1`] = `
<Fragment>
  <StyledWithViewportComponent
    columns={
      Array [
        Object {
          "isResizable": true,
          "key": "name",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
          "onRender": [Function],
        },
        Object {
          "isResizable": true,
          "key": "id",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
          "onRender": [Function],
        },
        Object {
          "isResizable": true,
          "key": "state",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
          "onRender": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "displayName": "test",
          "id": "id",
          "state": "Disabled",
          "subscriptionId": "id",
          "tenantId": "id",
        },
      ]
    }
    selectionMode={0}
  />
</Fragment>
`;

exports[`SubscriptionList matches snapshot when there are no list items 1`] = `
<Fragment>
  <StyledWithViewportComponent
    columns={
      Array [
        Object {
          "isResizable": true,
          "key": "name",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
          "onRender": [Function],
        },
        Object {
          "isResizable": true,
          "key": "id",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
          "onRender": [Function],
        },
        Object {
          "isResizable": true,
          "key": "state",
          "maxWidth": 400,
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
          "onRender": [Function],
        },
      ]
    }
    items={Array []}
    selectionMode={0}
  />
  authentication.azureActiveDirectory.subscriptionList.noItemText
</Fragment>
`;
